# flatland-marl

./: .RData  .Rhistory  .gitignore  .pre-commit-config.yaml  1_15_two_agents_no_deadlocks_regularized_batch_size_16_000_clip_coef_0.2 copy.txt  LICENSE  README.md  TorchRLRailEnv.py  analysis_of_rollout_tree_embedding.R  cleanrl_hpopt.db  eval_env.py  flatland_ppo_training_cleanrl.py  flatland_ppo_training_one_train_single_track.py  flatland_ppo_training_torchrl.py  flatland_ppo_training_workshop.py  orchestrate_multiple_runs.py  orchestrate_multiple_runs_torchrl.py  orchestrate_multiple_runs_torchrl_2_agents_100_000_steps.py  poetry.toml  ppo_training_torchrl.py  pyproject.toml  requirements.txt  torchrl_rollout_demo.py  tree_lstm_ppo_training.py  valid_actions.xlsx
curriculums/: 1_11_adding_agents_sequentially_transformer.json  1_12_adding_agents_sequentially_transformer_deadlock_penalty.json  1_13_adding_agents_sequentially_transformer_deadlock_penalty_50.json  1_14_two_agents_lstm_higher_deadlock_penalty.json  1_15_two_agents_lstm_paper_default.json  1_16_two_agents_lstm_paper_default_deadlock_penalty.json  1_17_ten_agents_paper.json  1_1_two_agents_no_deadlocks.json  1_2_two_agents_no_deadlocks_for_ten_agents.json  1_3_adding_agents_sequentally_disc_reward.json  1_4_50_agents.json  1_5_default_flatland_reward.json  1_6_adding_agents_sequentially_adapting_n_steps.json  1_7_two_agents_more_steps.json  1_8_two_agents_transformer_departure_reward.json  1_8_two_agents_transformer_tests.json  adding_agents_sequentally.json  flatland-rl__flatland_ppo_training_torchrl__1__1702391028curriculum.json  single_agent_shortest_path_start.json  single_agent_shortest_path_start_longer_start.json
flatland_cutils/: setup.py
flatland_torchrl/: custom_map_generator.py  torchrl_rail_env.py
solution/: command  (+7 more)
(+1885 files in other folders)
