[tool.poetry]
name = "flatland-marl-cleanrl-ppo"
version = "0.1.0"
description = "An implementation of PPO to train a TreeLSTM network for flatland on the basis of CleanRL."
authors = ["Emanuel Zwyssig"]
readme = "README.md"
packages = [{include = "flatland_marl_cleanrl_ppo"}]

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.11.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
PyYAML = "^6.0.1"
ffmpeg-python = "^0.2.0"
tensordict = "^0.2.1"
flatland-rl = {path = "flatland-rl"}
wheel = "^0.41.3"
install = "^1.3.5"
fasttext-wheel = "^0.9.2"
tensorboard = "^2.15.0"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
