[tool.poetry]
name = "flatland-marl-cleanrl-ppo"
version = "0.1.0"
description = "An implementation of PPO to train a TreeLSTM network for flatland on the basis of CleanRL."
authors = ["Emanuel Zwyssig"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pybind11 = "^2.11.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
PyYAML = "^6.0.1"
ffmpeg-python = "^0.2.0"
tensordict = "^0.2.1"
wheel = "^0.41.3"
install = "^1.3.5"
fasttext-wheel = "^0.9.2"
tensorboard = "^2.15.0"
ipykernel = "^6.26.0"
pylint = "^3.0.2"
black = "^23.11.0"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.5.0"
mypy = "^1.6.1"
gymnasium = "^0.29.1"
openpyxl = "^3.1.2"
rich = "^13.7.0"
optuna = "^3.4.0"
dashboard = "^0.0.6"
docopt = "^0.6.2"
pytest = "^7.4.4"
torchsummary = "^1.5.1"
flatland-rl = "^4.0.1"
torchrl = "0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]